--- a/services/client/tsconfig.json
+++ b/services/client/tsconfig.json
@@ -13,5 +13,6 @@
     "target": "es5",
     "jsx": "react",
     "moduleResolution": "node"
-  }
+  },
+  "include": ["src/**/*.ts", "src/**/*.tsx"]
 }
