--- a/services/client/package.json
+++ b/services/client/package.json
@@ -18,11 +18,13 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "spotify-web-api-js": "^1.5.2",
+    "superagent": "^7.1.1",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
     "webpack": "^5.67.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.3"
+    "webpack-dev-server": "^4.7.3",
+    "zustand": "^3.6.9"
   },
   "dependencies": {
     "@mui/icons-material": "^5.3.0",
