--- a/services/client/package.json
+++ b/services/client/package.json
@@ -12,6 +12,10 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/react-helmet": "^6.1.5",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
+    "eslint": "^8.7.0",
+    "eslint-plugin-react": "^7.28.0",
     "html-webpack-plugin": "^5.5.0",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
@@ -24,9 +28,7 @@
     "webpack": "^5.67.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.3",
-    "zustand": "^3.6.9"
-  },
-  "dependencies": {
+    "zustand": "^3.6.9",
     "@mui/icons-material": "^5.3.0",
     "react-router-dom": "^6.2.1"
   }
